appId: com.proyect1.ATIDental
---
- launchApp

- runFlow: common/login-admin.yaml

# =======================================================
# NAVEGACIÓN A FICHA DE PACIENTE
# =======================================================
- tapOn:
    id: "center-btn"

# Verificamos que la tarjeta del paciente carga y es visible
- extendedWaitUntil:
    visible:
      id: "patient-info-card"
    timeout: 10000

# Verificamos que se renderice la sección del historial de tratamientos
- assertVisible: ".*(Historial de Tratamientos|Treatment History|Aún no hay tratamientos|No treatments).*"

# =======================================================
# NAVEGACIÓN A REGISTRAR TRATAMIENTO Y RETORNO
# =======================================================
- scrollUntilVisible:
    element:
      id: "add-treatment-btn"
    direction: DOWN

- tapOn:
    id: "add-treatment-btn"

# Verificamos que pasamos a la pantalla de Registro de Tratamiento
- extendedWaitUntil:
    visible: ".*(Registrar Tratamiento|Register Treatment).*"
    timeout: 10000

# Tap en cancelar para regresar a la ficha
- scrollUntilVisible:
    element: ".*(Cancelar|Cancel).*"
    direction: DOWN

- tapOn: ".*(Cancelar|Cancel).*"

# Verificamos que retornamos a la ficha del paciente
- extendedWaitUntil:
    visible:
      id: "patient-info-card"
    timeout: 5000

# Cierre de sesión limpio
- tapOn:
    id: "menu-btn"

- tapOn:
    id: "nav-item-logout"